src/styles/globals.css
:root {
	 --navlink-transform-origin: 'bottom right';
	 --active-navlink-transform-origin: 'bottom left';
 }

.hand {
  animation-name: wave;
  animation-duration: 2.5s;
  animation-iteration-count: infinite;
  transform-origin: 70% 70%;
  display: inline-block;
}

@keyframes wave {
  0% { transform: rotate( 0.0deg) }
  10% { transform: rotate(14.0deg) }
  20% { transform: rotate(-8.0deg) }
  30% { transform: rotate(14.0deg) }
  40% { transform: rotate(-4.0deg) }
  50% { transform: rotate(10.0deg) }
  60% { transform: rotate( 0.0deg) }
  100% { transform: rotate( 0.0deg) }
}

.social-link {
	width: 40px;
	height: auto;
}

.project-preview {
  width: 100%;
  height: 100%;
	display: flex;
	justify-content: center;
	flex-direction: row;
	align-items: center;
}

.project-preview .atropos-inner {
  z-index: 1;
	border-radius: 16px !important;
}

.project-preview img {
  object-fit: contain;
  display: block;
  z-index: 1;
  transform-style: preserve-3d;
  pointer-events: none;
}

.project-preview .atropos-shadow {
  opacity: 0.5;
  transform: translate3d(0, 0, -1px);
}

.project-preview .project-preview-desktop {
  width: 100%;
  height: 100%;
	position: relative;
}

.project-preview .project-preview-mobile {
	position: absolute;
  left: 8%;
  top: 8%;
  /* width: 25%; */
	z-index: 999 !important;
}

.navlink {
	display: flex;
	position: relative;
	white-space: nowrap;
}

.navlink:after {
	content: "";
	position: absolute;
	width: 100%;
	-webkit-transform: scaleX(0);
	-moz-transform: scaleX(0);
	-ms-transform: scaleX(0);
	transform: scaleX(0);
	height: 2px;
	bottom: 0px;
	left: 0px;
	background-color: var(--chakra-colors-pink-400);
	transform-origin: var(--navlink-transform-origin);
	-webkit-transition: -webkit-transform 0.25s ease-out;
	transition: transform 0.25s ease-out;
}

.navlink.active:after {
	-webkit-transform: scaleX(1);
	-moz-transform: scaleX(1);
	-ms-transform: scaleX(1);
	transform: scaleX(1);
	transform-origin: var(--active-navlink-transform-origin);
}

.Toastify__toast {
  border-radius: 16px !important;
	font-weight: 600;
	font-family: NunitoVariable, Roboto, sans-serif !important;
}

